Assembley project added

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -55,7 +55,7 @@
     <div class="card-content">
       <h3 class="card-title">2048 Game</h3>
       <p class="card-text">Description of my second project.</p>
-      <a href="https://github.com/rvngr09/2048-GAME-WITH-SDL-" class="card-button">View Project</a>
+      <a href="https://github.com/rvngr09/2048-GAME-WITH-SDL" class="card-button">View Project</a>
     </div>
   </div>
   <div class="card">
@@ -64,6 +64,14 @@
       <h3 class="card-title">Personal Portfolio</h3>
       <p class="card-text">Description of my third project.</p>
       <a href="https://github.com/rvngr09/portfolio" class="card-button">View Project</a>
+    </div>
+  </div>
+  <div class="card">
+    <img src="src/calc.png" alt="Project 2" class="card-image">
+    <div class="card-content">
+      <h3 class="card-title">Assembley Calculator</h3>
+      <p class="card-text">Description of my second project.</p>
+      <a href="https://github.com/rvngr09/Assembley-Calculator" class="card-button">View Project</a>
     </div>
   </div>
 </div>
