--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 class="NAMETAG">Benallal Amine</h2>
         <div class="nav">
             
-            <a href="/projects.html" class="project">Projects</a>
+            <a href="projects.html" class="project">Projects</a>
             
             <a href="https://github.com/rvngr09" class="resume">Resume</a>
             <a href="https://github.com/rvngr09" class="contact">Contact</a>
