--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,10 @@
         </div>
 
     </header>
+
+    <div class="bigprojects">
+        <h1>My Biggest Projects</h1>
+    </div>
     
 </body>
 </html>
