Eperience Page update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="header">
         <h2 class="NAMETAG">Benallal Amine</h2>
         <div class="nav">
-            
+                        <a href="exp.html" class="exp">Experiences</a>
+
             <a href="projects.html" class="project">Projects</a>
             
             <a href="https://github.com/rvngr09" class="resume">Resume</a>
