--- a/projects.html
+++ b/projects.html
@@ -15,8 +15,9 @@
         <div class="header">
         <h2 class="NAMETAG">Benallal Amine</h2>
         <div class="nav">
-            
-            <a href="/projects.html" class="project">Projects</a>
+                        <a href="exp.html" class="exp">Experiences</a>
+
+            <a href="projects.html" class="project">Projects</a>
             
             <a href="https://github.com/rvngr09" class="resume">Resume</a>
             <a href="https://github.com/rvngr09" class="contact">Contact</a>
