--- a/exp.html
+++ b/exp.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header">
-        <h2 class="NAMETAG">Benallal Amine</h2>
+        <h2 href="index.html" class="NAMETAG"  >Benallal Amine</h2>
         <div class="nav">
                         <a href="exp.html" class="exp">Experiences</a>
 
