--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header">
-        <h2 href="index.html" class="NAMETAG"  >Benallal Amine</h2>
+        <a href="index.html" class="home">Benallal Amine</a>
         <div class="nav">
                         <a href="exp.html" class="exp">Experiences</a>
 
