Special mobile fucntion

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             
             <a href="https://github.com/rvngr09" class="resume">Resume</a>
             <a href="https://github.com/rvngr09" class="contact">Contact</a>
+            <button class="mobile-menu-btn">☰</button>
         </div>
 
     </header>
