Added Front end status

--- a/exp.html
+++ b/exp.html
@@ -70,13 +70,55 @@
         <div class="frontend">
         <h1>Front end</h1>
         <h2>CSS</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 20%;"></div>
+            </div>
+           <span>20%</span>
+        </div>
         
         <h2>Swing</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 65%;"></div>
+            </div>
+           <span>65%</span>
+        </div>
         <h2>JavaFX</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 0%;"></div>
+            </div>
+           <span>0%</span>
+        </div>
         <h2>SDL2</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 65%;"></div>
+            </div>
+           <span>65%</span>
+        </div>
         <h2>PhotoShop</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 95%;"></div>
+            </div>
+           <span>95%</span>
+        </div>
         <h2>Illustrator</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 100%;"></div>
+            </div>
+           <span>100%</span>
+        </div>
         <h2>Figma</h2>
+        <div class="clevel">
+            <div class="cbar">
+                 <div class="cprogressbar" style="width: 95%;"></div>
+            </div>
+           <span>95%</span>
+        </div>
 
         </div>
     </div>
