--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="nav">
             <a href="exp.html" class="exp">Experiences</a>
             <a href="projects.html" class="project">Projects</a>
-            <a href="https://github.com/rvngr09" class="resume">Resume</a>
-            <a href="https://github.com/rvngr09" class="contact">Contact</a>
+            <a href="src/portfolio.png" class="resume" download>Resume</a>
+            <a href="https://linktr.ee/benallalamine" class="contact">Contact</a>
         </div>
         <button class="mobile-menu-btn">☰</button>
     </div>
